# src/validations/cart.validation.ts
@@ -1,0 +1,8 @@
+import Joi from 'joi';
+
+export const addProductToCart = {
+  body: Joi.object({
+    productVariantId: Joi.number().required(),
+    quantity: Joi.number().optional().min(1),
+  }),
+};
